# Supermarket_system

./: .gitignore  CMakeLists.txt  README.md  main.cpp  users.txt
data/: bills.txt  goods.txt  users.txt
data/backup/: bills.txt  goods.txt  users.txt
doc/: authority.md  程序执行架构及相关细节.md
src/: CMakeLists.txt  bills.cpp  display.cpp  function.cpp  goods.cpp  head.h  main.cpp  sellLog.cpp  users.cpp
src/login/: CMakeLists.txt  WelcomePage.cpp  WelcomePage.h
src/users/: Admin.cpp  Cashier.cpp  Customer.cpp  Keeper.cpp
